force-app/main/default/objects/Case_Quality_Assurance__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Quality Assurance</relationshipLabel>
    <relationshipName>Case_Quality_Assurance</relationshipName>
    <type>Lookup</type>
</CustomField>