force-app/main/default/objects/Case_Quality_Assurance__c/fields/Communication_Notes__c.field-meta.xml
<CustomField>
    <fullName>Communication_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Communication Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>