force-app/main/default/objects/Case_Quality_Assurance__c/fields/Issue_Diagnosis_Notes__c.field-meta.xml
<CustomField>
    <fullName>Issue_Diagnosis_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue Diagnosis Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>