force-app/main/default/objects/Case_Quality_Assurance__c/fields/PE_Feedback_Notes__c.field-meta.xml
<CustomField>
    <fullName>PE_Feedback_Notes__c</fullName>
    <label>PE Feedback Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>