force-app/main/default/objects/Case_Quality_Assurance__c/fields/Product_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Product_Knowledge__c</fullName>
    <label>Product Knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Values</valueSetName>
    </valueSet>
</CustomField>